GEILDANKE-259 chore (leadlist.scss): layout fixes
New button stylesheet.
Layout fixes horizontal scrolling and centered leadlist.

--- a/_assets/stylesheets/base/_base.scss
+++ b/_assets/stylesheets/base/_base.scss
@@ -6,3 +6,8 @@ body {
 html {
   border-top: $layout-unit solid $color-black;
 }
+
+body {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
